tests/ui/infinite/infinite-macro-expansion.stderr
error: recursion limit reached while expanding `recursive!`
  --> $DIR/infinite-macro-expansion.rs:2:12
   |
LL |     () => (recursive!())
   |            ^^^^^^^^^^^^
...
LL |     recursive!()
   |     ------------ in this macro invocation
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`infinite_macro_expansion`)
   = note: this error originates in the macro `recursive` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

