tests/ui/infinite/infinite-macro-expansion.rs
macro_rules! recursive {
    () => (recursive!()) //~ ERROR recursion limit reached while expanding `recursive!`
}

fn main() {
    recursive!()
}
